--- a/src/components/scss/InputTodo.scss
+++ b/src/components/scss/InputTodo.scss
@@ -21,7 +21,6 @@
         height: 50px;
         border-radius: 50%;
         border: none;
-        font-size: 50px;
         color: #fff;
         padding: 0;
 
@@ -34,13 +33,32 @@
         cursor: pointer;
         transition: 0.3s;
 
-        span {
+        > div {
+            width: 70%;
+            height: 70%;
             display: inline-block;
             transition: 0.3s;
+
+            position: relative;
+            span {
+                display: block;
+                background-color: #fff;
+                width: 100%;
+                height: 6px;
+
+                position: absolute;
+                top: 50%;
+                &:nth-child(1) {
+                    transform: translateY(-50%);
+                }
+                &:nth-child(2) {
+                    transform: translateY(-50%) rotateZ(90deg);
+                }
+            }
         }
         &.clicked {
             background-color: red;
-            span {
+            > div {
                 transform: rotateZ(45deg);
             }
         }
